complete add seek help feature
